--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
         </dependency>
         <!-- undertow依赖结束 -->
 
+        <!-- mysql驱动依赖开始 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <type>jar</type>
+            <version>5.1.16</version>
+            <scope>compile</scope>
+        </dependency>
+        <!-- mysql驱动依赖结束 -->
+
         <!-- guice依赖注入框架依赖开始 -->
         <dependency>
             <groupId>com.google.inject</groupId>
@@ -48,11 +58,11 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.5</version>
         </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-guice</artifactId>
-            <version>3.11-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.mybatis</groupId>-->
+            <!--<artifactId>mybatis-guice</artifactId>-->
+            <!--<version>3.11-SNAPSHOT</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
