--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>snakeyaml</artifactId>
             <version>1.19</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.9</version>
+        </dependency>
         <!-- 第三方工具包依赖结束 -->
 
         <!-- lombok依赖开始 -->
