--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.9</version>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
         <!-- 第三方工具包依赖结束 -->
 
         <!-- lombok依赖开始 -->
