--- a/src/main/resources/app.yml
+++ b/src/main/resources/app.yml
@@ -1,7 +1,7 @@
 server:
   host: localhost
   port: 8080
-  servletPath: /
+  contextPath: /
   deploymentName: guice-example
 jdbc:
   url: jdbc:mysql://localhost:3306/graduate-design-ww
